--- a/gatsby-plugin-fathom/package.json
+++ b/gatsby-plugin-fathom/package.json
@@ -4,7 +4,8 @@
   "description": "Fathom Analytics tracking for you Gatsby site.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "develop": "jest --watchAll",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -15,5 +16,12 @@
   "bugs": {
     "url": "https://github.com/raae/gatsby-plugin-fathom/issues"
   },
-  "homepage": "https://github.com/raae/gatsby-plugin-fathom#readme"
+  "homepage": "https://github.com/raae/gatsby-plugin-fathom#readme",
+  "devDependencies": {
+    "@babel/core": "7.12.10",
+    "@babel/preset-env": "7.12.11",
+    "babel-jest": "26.6.3",
+    "gatsby-plugin-utils": "0.8.0",
+    "jest": "26.6.3"
+  }
 }
