--- a/gatsby-plugin-fathom/package.json
+++ b/gatsby-plugin-fathom/package.json
@@ -23,5 +23,12 @@
     "babel-jest": "26.6.3",
     "gatsby-plugin-utils": "0.8.0",
     "jest": "26.6.3"
-  }
+  },
+  "keywords": [
+    "gatsby",
+    "gatsby-plugin",
+    "fathom analytics",
+    "usefathom",
+    "google analytics alternative"
+  ]
 }
