--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "develop": "yarn workspace example develop",
     "test": "yarn workspace @raae/gatsby-plugin-fathom test",
-    "readme": "cp ./README.md ./gatsby-plugin-fathom/README.md"
-  },
+    "readme": "cp ./README.md ./gatsby-plugin-fathom/README.md",
+    "bump": "yarn workspace @raae/gatsby-plugin-fathom bump"
+  }
 }
